crates/toml_edit/tests/fixtures/invalid/string/basic-unknown-escape.stderr
TOML parse error at line 1, column 8
  |
1 | a = "\@"
  |        ^
Invalid escape sequence
Expected `b`, `f`, `n`, `r`, `t`, `u`, `U`, `\`, `"`
